set up header, grid items with placeholder images

--- a/style.css
+++ b/style.css
@@ -3,4 +3,35 @@ body {
   color:#EBD9BB;
   font-family: helvetica,arial,sans-serif;
   font-weight: 100;
+  margin:0;
+  padding:0;
+}
+h1 {
+  font-family: 'Merriweather', serif;
+  font-weight: 400;
+}
+.header {
+  height: 98vh;
+  width: 98vw;
+  display: flex;
+}
+.head-content {
+  text-align: center;
+  margin: auto;
+  width: 50vw;
+}
+
+.grid-wrap {
+  margin: auto;
+  padding: 3em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-rows: 500px;
+  grid-gap: 50px;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
