--- a/style.css
+++ b/style.css
@@ -7,10 +7,103 @@ body {
   padding:0;
 }
 
-h1 {
+h1,h2 {
   font-family: 'Merriweather', serif;
   font-weight: 400;
 }
+
+svg {
+  position: absolute;
+}
+
+.st0 {
+  fill:none;
+  stroke:#252525;
+  stroke-width:2px;
+  stroke-miterlimit:10;
+}
+
+#shape1 {
+	 animation: shape1 10s infinite alternate;
+ }
+ #shape2 {
+ 	 animation: shape2 10s infinite alternate;
+  }
+ #shape4 {
+ 	 animation: shape4 10s infinite alternate;
+  }
+ #shape5 {
+ 	 animation: shape5 10s infinite alternate;
+  }
+ #shape6 {
+ 	 animation: shape6 10s infinite alternate;
+  }
+
+@keyframes shape1 {
+		from {
+				transform: rotate(5deg);
+		}
+		to {
+        transform: translate(0px, 20%);
+		}
+}
+
+@keyframes shape2 {
+   from {
+       transform-origin: center;
+   }
+   to {
+       transform: translate(5px, -20%);
+   }
+}
+
+@keyframes shape4 {
+   from {
+       transform: rotate(10deg);
+   }
+   to {
+       transform: translate(-55px, 25%);
+   }
+}
+
+@keyframes shape5 {
+   from {
+       transform-origin: 100px 100px;
+   }
+   to {
+       transform: translate(-5px, 10%);
+   }
+}
+
+@keyframes shape6 {
+   from {
+       transform-origin: 5px 5px;
+   }
+   to {
+       transform: translate(10px, 5%);
+   }
+}
+
+
+.header {
+  position: relative;
+  height: 98vh;
+  width: 98vw;
+  display: flex;
+}
+
+.head-content {
+  text-align: left;
+  margin: auto;
+  width: 50vw;
+}
+.head-content img {
+  width: 175px;
+  height: 175px;
+  border-radius: 200px;
+  filter: opacity(70%);
+}
+
 .intro {
   margin-bottom: 3em;
 }
@@ -21,6 +114,9 @@ h1 {
 .social a {
   color: #EBD9BB;
   margin: 10px;
+}
+.social a:hover {
+  color: #4e4c50;
 }
 
 .button {
@@ -52,36 +148,52 @@ h1 {
     transform: scale(0.99);
 }
 
-.header {
-  height: 98vh;
-  width: 98vw;
-  display: flex;
-}
-
-.head-content {
-  text-align: left;
-  margin: auto;
-  width: 50vw;
-}
-.head-content img {
-  width: 175px;
-  height: 175px;
-  border-radius: 200px;
-  border: 5px solid #4e4c50;
-  filter: opacity(80%);
-}
-
 .grid-wrap {
   margin: auto;
   padding: 3em;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-auto-rows: 500px;
+  grid-auto-rows: 400px;
   grid-gap: 50px;
+}
+
+.item {
+  position: relative;
 }
 
 .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
+}
+
+.overlay {
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ width: 100%;
+ height: 100%;
+ transform: translate(-50%, -50%);
+ background-color: rgb(53,52,54,0.7);
+ border-color: rgb(53,52,54,0.7);
+ border-style: solid;
+ border-width: 2px;
+ opacity: 0;
+}
+
+.overlay:hover {
+  opacity: 1;
+}
+
+.overlay div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 75%;
+  height: 30%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #EBD9BB;
+  opacity: inherit;
 }
