--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1,h2 {
 }
 
 svg {
-  position: absolute;
+  position: fixed;
 }
 
 #topmenu {
@@ -35,7 +35,8 @@ svg {
     color: #4e4c50;
 }
 #topmenu .button {
-  margin-right: 2em;
+  margin-right: 3em;
+  margin-left: 1em;
 }
 
 .nav-colored {
@@ -75,7 +76,6 @@ svg {
 .header {
   position: relative;
   height: 98vh;
-  width: 98vw;
   display: flex;
 }
 
@@ -87,8 +87,6 @@ svg {
 .head-content img {
   width: 175px;
   height: 175px;
-  border-radius: 200px;
-  filter: opacity(70%);
 }
 
 .intro {
@@ -130,36 +128,56 @@ svg {
   padding: 3em;
   display: grid;
   grid-template-columns: repeat(2, minmax(400px, 1fr));
-  grid-auto-rows: 400px;
-  grid-gap: 5px;
+  grid-gap: 10px;
   max-width: 1500px;
 }
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:500px) {
   .grid-wrap {
     grid-template-columns: 1fr;
-    grid-auto-rows: 600px;
+    grid-gap: 5px;
+    padding: 1em;
+  }
+  .header {
+    height:auto;
+  }
+  .head-content {
+    width: 80%;
+    margin-top: 8em;
+  }
+  svg {
+    width: 150%;
+    position: fixed;
+  }
+  body {
+    font-weight:normal;
+  }
+}
+@media screen and (min-width:501px) and (max-width:1100px) {
+  .grid-wrap {
+    grid-template-columns: 1fr;
   }
 }
 
 .item {
   position: relative;
+  margin: 0 auto;
 }
 
 .item img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  object-position: left bottom;
   display: block;
 }
 
 .item a {
   color:#EBD9BB;
-  text-decoration: none;
 }
 
 .item a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .overlay {
@@ -169,15 +187,14 @@ svg {
  width: 100%;
  height: 100%;
  transform: translate(-50%, -50%);
- background-color: rgb(53,52,54,0.9);
- border-color: rgb(53,52,54,0.7);
- border-style: solid;
- border-width: 2px;
+ background-color: rgb(37,37,37,0.95);
  opacity: 0;
+ border-radius: 5px;
 }
 
 .overlay:hover {
   opacity: 1;
+  transition: .5s;
 }
 
 .overlay div {
@@ -189,4 +206,16 @@ svg {
   text-align: left;
   color: #EBD9BB;
   opacity: inherit;
+}
+
+.contact {
+  position: relative;
+  margin: 0 auto;
+  padding: 5em;
+  background-color: #252525;
+  line-height: 1.5em;
+  text-align:center;
+}
+.contact a {
+  color:#EBD9BB;
 }
